<resources>
    <string name="app_name">My Diary</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_network">NetworkActivity</string>

    <string name="title_activity_write__diary">Write_Diary</string>

    <string name="title_activity_create_diary">Create_diary</string>

    <string name="title_activity_calendar">Calendar</string>

    <string name="title_activity_friend">friend</string>

    <string name="title_activity_simple_browse_diary">Simple_browse_diary</string>

    <string name="title_activity_ffrien_info">Ffrien_info</string>

    <string name="sent_verification_code">傳送驗證碼</string>

    <string name="please_input_verification_code">請輸入驗證碼</string>

    <string name="ok">確定</string>

    <string name="input_verification_code_hint">在此輸入驗證碼</string>

    <string name="reset_account">更改要註冊的帳號</string>

    <string name="logout">登出目前帳號</string>

    <string name="register">註冊</string>

    <string name="login">登入</string>

    <string name="wrong_password_format">密碼格式錯誤</string>

    <string name="wrong_account_format">帳號格式錯誤</string>

    <string name="write_diary">寫下日記</string>

    <string name="friend">好友</string>

    <string name="news">新的消息</string>

    <string name="personal_info">個人資料</string>

    <string name="tool">設定</string>

    <string name="developer">開發者</string>

    <string name="friend_invitation">好友邀請</string>

    <string name="choose_function">請選擇要使用的功能</string>

    <string name="sent_friend_invitation">送出好友邀請</string>

    <string name="check_friend_invitation">檢視好友邀請</string>

    <string name="check_friend_diary">檢視好友日記</string>

    <string name="check_friend_info">檢視好友資訊</string>

    <string name="title_activity_loby">My Diary</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="ask_register">第一次使用，請先註冊帳號！</string>
    <string name="ask_login">已經註冊過帳號，請登入！</string>
    <string name="account">帳號</string>
    <string name="password">密碼</string>
    <string name="account_hint">輸入E-mail</string>
    <string name="password_hint">驗證帳號成功後再輸入密碼</string>
    <string name="register_ac_repeat">該帳號已被使用</string>
    <string name="register_success">註冊成功,已登入!</string>
    <string name="internet_problem">網路訊號異常，再試一次</string>
    <string name="no_internet">偵測不到網路連線，請開啟行動網路或無線上網</string>
    <string name="try_again">重試</string>
    <string name="loading">載入中...</string>
    <string name="saving">儲存中...</string>
    <string name="unstable_internet">網路連線不穩定，請稍後再試</string>
    <string name="register_create_failed">註冊失敗，再試一次</string>
    <string name="login_success">登入成功!</string>
    <string name="login_account_not_exist">該帳號不存在</string>
    <string name="login_ps_not_correct">密碼錯誤</string>

    <string name="no_diary">還沒有任何日記</string>
    <string name="no_friend">還沒有任何朋友</string>
    <string name="oops">哎呀！</string>

    <string name="no_content">未填寫</string>
    <string name="ed_diary_hint">記錄生活...</string>
    <string name="title">標題</string>
    <string name="mark_diary">標記</string>
    <string name="mood">心情</string>
    <string name="date">日期</string>

    <string-array name="constellation">
        <item>未填寫</item>
        <item>水瓶座</item>
        <item>雙魚座</item>
        <item>牡羊座</item>
        <item>金牛座</item>
        <item>雙子座</item>
        <item>巨蠍座</item>
        <item>獅子座</item>
        <item>處女座</item>
        <item>天秤座</item>
        <item>天蠍座</item>
        <item>射手座</item>
        <item>摩羯座</item>

    </string-array>


</resources>
