<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@drawable/blue_background"
    android:foreground="@drawable/blue_foreground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="614dp">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView3"
            android:layout_marginTop="@dimen/big_margin_to_bg"
            android:layout_marginBottom="@dimen/big_margin_to_bg">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/green_bg"
                    android:id="@+id/rg"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/ask_register"
                            android:id="@+id/textView11"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:textAlignment="center"
                            android:layout_margin="5dp"
                            android:textColor="@color/brownText" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/account"
                            android:id="@+id/textView13"
                            android:layout_below="@+id/textView11"
                            android:layout_alignLeft="@+id/textView11"
                            android:layout_alignStart="@+id/textView11"
                            android:layout_margin="5dp"
                            android:textColor="@color/brownText" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/ed_register_account"
                            android:hint="@string/account_hint"
                            android:maxLength="@integer/account_length"
                            android:layout_alignBaseline="@+id/textView13"
                            android:layout_alignBottom="@+id/textView13"
                            android:layout_alignLeft="@+id/tv1"
                            android:layout_alignStart="@+id/tv1"
                            android:layout_alignRight="@+id/textView11"
                            android:layout_alignEnd="@+id/textView11"
                            android:nextFocusForward="@+id/ed_register_password"
                            android:singleLine="true"
                            android:inputType="textEmailAddress"
                            android:layout_margin="5dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="4">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/tv1"
                                android:text="1"
                                android:layout_alignBottom="@+id/btn_sent_verification_code"
                                android:layout_weight="2"
                                android:layout_toLeftOf="@+id/btn_sent_verification_code"
                                android:layout_alignParentTop="true"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true"
                                android:layout_margin="5dp" />

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sent_verification_code"
                                android:id="@+id/btn_sent_verification_code"
                                android:layout_centerVertical="true"
                                android:layout_alignParentRight="true"
                                android:layout_alignParentEnd="true"
                                android:layout_margin="10dp"
                                android:background="@drawable/btn_blue_bg"
                                android:textColor="@color/brownText" />
                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/password"
                            android:id="@+id/textView14"
                            android:layout_alignBaseline="@+id/ed_register_password"
                            android:layout_alignBottom="@+id/ed_register_password"
                            android:layout_alignLeft="@+id/textView13"
                            android:layout_alignStart="@+id/textView13"
                            android:layout_margin="5dp"
                            android:textColor="@color/brownText" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/ed_register_password"
                            android:maxLength="@integer/password_length"
                            android:hint="@string/password_hint"
                            android:layout_below="@+id/tv1"
                            android:layout_alignLeft="@+id/tv1"
                            android:layout_alignStart="@+id/tv1"
                            android:layout_alignRight="@+id/btn_sent_verification_code"
                            android:layout_alignEnd="@+id/btn_sent_verification_code"
                            android:imeOptions="actionDone"
                            android:singleLine="true"
                            android:inputType="textPassword"
                            android:layout_margin="5dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="20dp">

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/reset_account"
                                android:id="@+id/btn_reset_account"
                                android:layout_weight="1"
                                android:background="@drawable/btn_blue_bg"
                                android:textColor="@color/brownText"
                                android:layout_marginLeft="52dp"
                                android:layout_marginStart="52dp"
                                android:layout_alignParentTop="true"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true" />

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/register"
                                android:id="@+id/btn_register"
                                android:layout_weight="1"
                                android:background="@drawable/btn_blue_bg"
                                android:textColor="@color/brownText"
                                android:layout_marginLeft="37dp"
                                android:layout_marginStart="37dp"
                                android:layout_alignParentTop="true"
                                android:layout_toRightOf="@+id/btn_reset_account"
                                android:layout_toEndOf="@+id/btn_reset_account" />
                        </RelativeLayout>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.32"
                    android:background="@drawable/green_bg"
                    android:layout_below="@+id/rg"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/ask_login"
                            android:id="@+id/textView12"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:textAlignment="center"
                            android:layout_margin="5dp"
                            android:textColor="@color/brownText" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/account"
                            android:id="@+id/textView15"
                            android:layout_alignTop="@+id/textView12"
                            android:layout_alignLeft="@+id/textView14"
                            android:layout_alignStart="@+id/textView14"
                            android:layout_margin="5dp"
                            android:textColor="@color/brownText" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/ed_login_account"
                            android:hint="@string/account_hint"
                            android:layout_alignBaseline="@+id/textView15"
                            android:layout_alignBottom="@+id/textView15"
                            android:layout_toRightOf="@+id/textView15"
                            android:layout_alignRight="@+id/textView11"
                            android:layout_alignEnd="@+id/textView11"
                            android:nextFocusForward="@+id/ed_login_password"
                            android:singleLine="true"
                            android:inputType="textEmailAddress"
                            android:layout_margin="5dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/password"
                            android:id="@+id/textView16"
                            android:layout_below="@+id/textView15"
                            android:layout_alignLeft="@+id/textView15"
                            android:layout_alignStart="@+id/textView15"
                            android:layout_margin="5dp"
                            android:textColor="@color/brownText" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/ed_login_password"
                            android:layout_alignBottom="@+id/textView16"
                            android:layout_alignLeft="@+id/ed_login_account"
                            android:layout_alignStart="@+id/ed_login_account"
                            android:maxLength="@integer/password_length"
                            android:layout_alignRight="@+id/ed_login_account"
                            android:layout_alignEnd="@+id/ed_login_account"
                            android:singleLine="true"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:layout_margin="5dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/login"
                                android:id="@+id/btn_login"
                                android:layout_alignParentTop="true"
                                android:layout_centerHorizontal="true"
                                android:layout_margin="10dp"
                                android:background="@drawable/btn_blue_bg"
                                android:textColor="@color/brownText" />
                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>

    </RelativeLayout>

</RelativeLayout>
